# centered-windows

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.yml  resources.rc
include/: AppWindow.h  DisplayMonitor.h  IniConfig.h  Logger.h  Monitor.h  Window.h  WindowBlacklist.h
src/: AppWindow.c  DisplayMonitor.c  IniConfig.c  Logger.c  Monitor.c  Window.c  WindowBlacklist.c  app_window_info.rs  data.rs  display_monitor_info.rs  lib.rs  main.c  main.rs  overlay.rs  overlay.wgsl
src/overlay/: mod.rs  state.rs
