[package]
name = "centered-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = "0.30.5"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
]
